Código de 224 linhas, nova tentativa

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <h2>Desenvolvedor Web</h2>
         </div>
 
-        <div class="h-sobre">
-            <div class="h-title-sobre">
+        <div class="h-tittle">
+            <div class="h-title-h2">
                 <h2>Sobre mim</h2>
             </div>
             <div class="w-100">
@@ -35,8 +35,8 @@
             </div>
         </div>
 
-        <div class="h-experiencia">
-            <div class="h-title-experiencia">
+        <div class="h-tittle">
+            <div class="h-title-h2">
                 <h2>Experiências</h2>
             </div>
             <div class="h-itens">
@@ -103,8 +103,8 @@
             </div>
         </div>
 
-        <div class="h-educacao">
-            <div class="h-title-educacao">
+        <div class="h-tittle">
+            <div class="h-title-h2">
                 <h2>Educação</h2>
             </div>
             <div class="item">
